# internal/api/v1/accestoken.go
@@ -13,6 +13,8 @@ import (
 // AccessTokenApiInter -.
 type AccessTokenApiInter interface {
 	CreateOne(c *gin.Context, userId int)
+	GetSelfTokens(c *gin.Context, userId int)
+	GetTokensByOwner(c *gin.Context)
 }
 
 // AccessTokenApi -.
@@ -21,6 +23,7 @@ type AccessTokenApi struct {
 }
 
 // CreateOne godoc
+// @Security 		APIAuth
 // @Summary 		Create a new access token
 // @Description Creates a new access token resource
 // @ID          AccessTokenCreateOne
@@ -53,4 +56,61 @@ func (a *AccessTokenApi) CreateOne(c *gin.Context, userId int) {
 	}
 
 	response.WriteSuccess(c, accessToken)
+}
+
+// GetSelfTokens godoc
+// @Security 		APIAuth
+// @Summary 		Get self access tokens
+// @Description Retrieves access tokens owned by the authenticated user
+// @ID          AccessTokenGetSelfTokens
+// @Tags 				AccessTokens
+// @Produce 		json
+// @Success 		200 {object} response.AccessTokenListAPIResponse "List of access tokens"
+// @Failure     500 {object} errors.APIError "Internal server error"
+// @Router 			/api/v1/access-tokens [get]
+func (a *AccessTokenApi) GetSelfTokens(c *gin.Context, userId int) {
+	ctx := c.Request.Context()
+
+	accessTokens, err := a.accessTokenService.GetByOwner(ctx, userId)
+	if err != nil {
+		c.Error(err)
+		return
+	}
+
+	response.WriteSuccess(c, accessTokens)
+}
+
+// GetTokensByOwner godoc
+// @Security 		APIAuth
+// @Summary 		Get access tokens by owner
+// @Description Retrieves access tokens owned by the specified user
+// @ID          AccessTokenGetByOwner
+// @Tags 				AccessTokens
+// @Produce 		json
+// @Param       owner path int true "Owner ID"
+// @Success 		200 {object} response.AccessTokenListAPIResponse "List of access tokens"
+// @Failure     400 {object} errors.APIError "Bad request (invalid ID)"
+// @Failure     500 {object} errors.APIError "Internal server error"
+// @Router 			/api/v1/access-tokens/{owner} [get]
+func (a *AccessTokenApi) GetTokensByOwner(c *gin.Context) {
+	ctx := c.Request.Context()
+
+	var dto dto.AccessTokenGetByOwnerDto
+	if err := c.ShouldBindUri(&dto); err != nil {
+		c.Error(
+			errors.NewAPIError(
+				http.StatusBadRequest,
+				err.Error(),
+			),
+		)
+		return
+	}
+
+	accessTokens, err := a.accessTokenService.GetByOwner(ctx, dto.Owner)
+	if err != nil {
+		c.Error(err)
+		return
+	}
+
+	response.WriteSuccess(c, accessTokens)
 }
