# pkg/response/accesstoken_response.go
@@ -6,3 +6,8 @@ import "github.com/1111mp/gin-app/ent"
 type AccessTokenAPIResponse struct {
 	APIResponse[ent.AccessTokenEntity]
 }
+
+// AccessTokenListAPIResponse -.
+type AccessTokenListAPIResponse struct {
+	APIResponse[[]*ent.AccessTokenEntity]
+}
